simplified api and added lists for storing data
