# spring-server/src/main/java/io/swagger/model/Currency.java
@@ -1,41 +1,0 @@
-package io.swagger.model;
-
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonValue;
-import javax.validation.constraints.*;
-import com.fasterxml.jackson.annotation.JsonCreator;
-
-/**
- * Gets or Sets Currency
- */
-public enum Currency {
-  
-  USD("USD"),
-  
-  GBP("GBP"),
-  
-  EUR("EUR");
-
-  private String value;
-
-  Currency(String value) {
-    this.value = value;
-  }
-
-  @Override
-  @JsonValue
-  public String toString() {
-    return String.valueOf(value);
-  }
-
-  @JsonCreator
-  public static Currency fromValue(String text) {
-    for (Currency b : Currency.values()) {
-      if (String.valueOf(b.value).equals(text)) {
-        return b;
-      }
-    }
-    return null;
-  }
-}
-
