# spring-server/src/main/java/io/swagger/model/MessagesDonation.java
@@ -1,206 +1,0 @@
-package io.swagger.model;
-
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonValue;
-import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
-import java.util.UUID;
-import javax.validation.constraints.*;
-/**
- * MessagesDonation
- */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-05-11T20:19:35.562Z")
-
-public class MessagesDonation   {
-  @JsonProperty("amount")
-  private Float amount = null;
-
-  /**
-   * Gets or Sets currency
-   */
-  public enum CurrencyEnum {
-    USD("USD"),
-    
-    GBP("GBP"),
-    
-    EUR("EUR");
-
-    private String value;
-
-    CurrencyEnum(String value) {
-      this.value = value;
-    }
-
-    @Override
-    @JsonValue
-    public String toString() {
-      return String.valueOf(value);
-    }
-
-    @JsonCreator
-    public static CurrencyEnum fromValue(String text) {
-      for (CurrencyEnum b : CurrencyEnum.values()) {
-        if (String.valueOf(b.value).equals(text)) {
-          return b;
-        }
-      }
-      return null;
-    }
-  }
-
-  @JsonProperty("currency")
-  private CurrencyEnum currency = null;
-
-  @JsonProperty("orgCode")
-  private String orgCode = null;
-
-  @JsonProperty("orgName")
-  private String orgName = null;
-
-  @JsonProperty("transactionId")
-  private UUID transactionId = null;
-
-  public MessagesDonation amount(Float amount) {
-    this.amount = amount;
-    return this;
-  }
-
-   /**
-   * Get amount
-   * @return amount
-  **/
-  @ApiModelProperty(required = true, value = "")
-  @NotNull
-  public Float getAmount() {
-    return amount;
-  }
-
-  public void setAmount(Float amount) {
-    this.amount = amount;
-  }
-
-  public MessagesDonation currency(CurrencyEnum currency) {
-    this.currency = currency;
-    return this;
-  }
-
-   /**
-   * Get currency
-   * @return currency
-  **/
-  @ApiModelProperty(required = true, value = "")
-  @NotNull
-  public CurrencyEnum getCurrency() {
-    return currency;
-  }
-
-  public void setCurrency(CurrencyEnum currency) {
-    this.currency = currency;
-  }
-
-  public MessagesDonation orgCode(String orgCode) {
-    this.orgCode = orgCode;
-    return this;
-  }
-
-   /**
-   * Get orgCode
-   * @return orgCode
-  **/
-  @ApiModelProperty(required = true, value = "")
-  @NotNull
-  public String getOrgCode() {
-    return orgCode;
-  }
-
-  public void setOrgCode(String orgCode) {
-    this.orgCode = orgCode;
-  }
-
-  public MessagesDonation orgName(String orgName) {
-    this.orgName = orgName;
-    return this;
-  }
-
-   /**
-   * Get orgName
-   * @return orgName
-  **/
-  @ApiModelProperty(required = true, value = "")
-  @NotNull
-  public String getOrgName() {
-    return orgName;
-  }
-
-  public void setOrgName(String orgName) {
-    this.orgName = orgName;
-  }
-
-  public MessagesDonation transactionId(UUID transactionId) {
-    this.transactionId = transactionId;
-    return this;
-  }
-
-   /**
-   * Get transactionId
-   * @return transactionId
-  **/
-  @ApiModelProperty(value = "")
-  public UUID getTransactionId() {
-    return transactionId;
-  }
-
-  public void setTransactionId(UUID transactionId) {
-    this.transactionId = transactionId;
-  }
-
-
-  @Override
-  public boolean equals(java.lang.Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    MessagesDonation messagesDonation = (MessagesDonation) o;
-    return Objects.equals(this.amount, messagesDonation.amount) &&
-        Objects.equals(this.currency, messagesDonation.currency) &&
-        Objects.equals(this.orgCode, messagesDonation.orgCode) &&
-        Objects.equals(this.orgName, messagesDonation.orgName) &&
-        Objects.equals(this.transactionId, messagesDonation.transactionId);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(amount, currency, orgCode, orgName, transactionId);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class MessagesDonation {\n");
-    
-    sb.append("    amount: ").append(toIndentedString(amount)).append("\n");
-    sb.append("    currency: ").append(toIndentedString(currency)).append("\n");
-    sb.append("    orgCode: ").append(toIndentedString(orgCode)).append("\n");
-    sb.append("    orgName: ").append(toIndentedString(orgName)).append("\n");
-    sb.append("    transactionId: ").append(toIndentedString(transactionId)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(java.lang.Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
-
