# spring-server/src/main/java/io/swagger/model/Payment.java
@@ -1,181 +1,0 @@
-package io.swagger.model;
-
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonValue;
-import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
-import javax.validation.constraints.*;
-/**
- * Payment
- */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-05-11T20:19:35.562Z")
-
-public class Payment   {
-  @JsonProperty("cardNumber")
-  private String cardNumber = null;
-
-  @JsonProperty("amount")
-  private Float amount = null;
-
-  @JsonProperty("orgCode")
-  private String orgCode = null;
-
-  /**
-   * Gets or Sets currency
-   */
-  public enum CurrencyEnum {
-    USD("USD"),
-    
-    GBP("GBP"),
-    
-    EUR("EUR");
-
-    private String value;
-
-    CurrencyEnum(String value) {
-      this.value = value;
-    }
-
-    @Override
-    @JsonValue
-    public String toString() {
-      return String.valueOf(value);
-    }
-
-    @JsonCreator
-    public static CurrencyEnum fromValue(String text) {
-      for (CurrencyEnum b : CurrencyEnum.values()) {
-        if (String.valueOf(b.value).equals(text)) {
-          return b;
-        }
-      }
-      return null;
-    }
-  }
-
-  @JsonProperty("currency")
-  private CurrencyEnum currency = null;
-
-  public Payment cardNumber(String cardNumber) {
-    this.cardNumber = cardNumber;
-    return this;
-  }
-
-   /**
-   * Get cardNumber
-   * @return cardNumber
-  **/
-  @ApiModelProperty(required = true, value = "")
-  @NotNull
-  public String getCardNumber() {
-    return cardNumber;
-  }
-
-  public void setCardNumber(String cardNumber) {
-    this.cardNumber = cardNumber;
-  }
-
-  public Payment amount(Float amount) {
-    this.amount = amount;
-    return this;
-  }
-
-   /**
-   * Get amount
-   * @return amount
-  **/
-  @ApiModelProperty(required = true, value = "")
-  @NotNull
-  public Float getAmount() {
-    return amount;
-  }
-
-  public void setAmount(Float amount) {
-    this.amount = amount;
-  }
-
-  public Payment orgCode(String orgCode) {
-    this.orgCode = orgCode;
-    return this;
-  }
-
-   /**
-   * Get orgCode
-   * @return orgCode
-  **/
-  @ApiModelProperty(value = "")
-  public String getOrgCode() {
-    return orgCode;
-  }
-
-  public void setOrgCode(String orgCode) {
-    this.orgCode = orgCode;
-  }
-
-  public Payment currency(CurrencyEnum currency) {
-    this.currency = currency;
-    return this;
-  }
-
-   /**
-   * Get currency
-   * @return currency
-  **/
-  @ApiModelProperty(required = true, value = "")
-  @NotNull
-  public CurrencyEnum getCurrency() {
-    return currency;
-  }
-
-  public void setCurrency(CurrencyEnum currency) {
-    this.currency = currency;
-  }
-
-
-  @Override
-  public boolean equals(java.lang.Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    Payment payment = (Payment) o;
-    return Objects.equals(this.cardNumber, payment.cardNumber) &&
-        Objects.equals(this.amount, payment.amount) &&
-        Objects.equals(this.orgCode, payment.orgCode) &&
-        Objects.equals(this.currency, payment.currency);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(cardNumber, amount, orgCode, currency);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class Payment {\n");
-    
-    sb.append("    cardNumber: ").append(toIndentedString(cardNumber)).append("\n");
-    sb.append("    amount: ").append(toIndentedString(amount)).append("\n");
-    sb.append("    orgCode: ").append(toIndentedString(orgCode)).append("\n");
-    sb.append("    currency: ").append(toIndentedString(currency)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(java.lang.Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
-
